<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/goro_black"
    tools:context=".Registro_activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/medievalsharp"
        android:text="@string/configura_tu_puesto"
        android:textColor="@color/goro_yellow"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_restaurante"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edtNombreRestaurante"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:hint="@string/ej_la_cocina_del_goro"
            android:inputType="textCapWords"
            android:paddingStart="10dp"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rubro_especialidad"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edtRubro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:hint="@string/ej_asados_y_parrilladas"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nombre_del_cliente"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edtNombreCliente"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:hint="@string/tu_nombre_de_guerrero"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/goro_orange"
            android:fontFamily="@font/medievalsharp"
            android:text="@string/continuar"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>